objects/Space__c.object
<CustomObject>
    <fields>
        <fullName>OccupancyStatus__c</fullName>
        <description>This lists the status of the property being leased.</description>
        <label>Occupancy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Vacancy</fullName>
                </value>
                <value>
                    <fullName>2 - Leasing Issues</fullName>
                </value>
                <value>
                    <fullName>3 - LBNT (Leased but not trading)</fullName>
                </value>
                <value>
                    <fullName>4 - Held Vacancies</fullName>
                </value>
                <value>
                    <fullName>5 - Trading New Retailers</fullName>
                </value>
                <value>
                    <fullName>6 - Expiring Leases</fullName>
                </value>
                <value>
                    <fullName>7 - Holdovers</fullName>
                </value>
                <value>
                    <fullName>8 - Project Shops</fullName>
                </value>
                <value>
                    <fullName>9 - Trading</fullName>
                </value>
                <value>
                    <fullName>10 - Inactive</fullName>
                </value>
                <value>
                    <fullName>1- Vacancy</fullName>
                    <isActive>false</isActive>
                    <label>1- Vacancy</label>
                </value>
                <value>
                    <fullName>9 - Closed Shops</fullName>
                    <isActive>false</isActive>
                    <label>9 - Closed Shops</label>
                </value>
                <value>
                    <fullName>Achieved</fullName>
                    <isActive>false</isActive>
                    <label>Achieved</label>
                </value>
                <value>
                    <fullName>Closed Shops</fullName>
                    <isActive>false</isActive>
                    <label>Closed Shops</label>
                </value>
                <value>
                    <fullName>Expiring Leases</fullName>
                    <isActive>false</isActive>
                    <label>Expiring Leases</label>
                </value>
                <value>
                    <fullName>Held Vacancies</fullName>
                    <isActive>false</isActive>
                    <label>Held Vacancies</label>
                </value>
                <value>
                    <fullName>Holdovers</fullName>
                    <isActive>false</isActive>
                    <label>Holdovers</label>
                </value>
                <value>
                    <fullName>LBNT (Leased but not trading)</fullName>
                    <isActive>false</isActive>
                    <label>LBNT (Leased but not trading)</label>
                </value>
                <value>
                    <fullName>Leasing Issues</fullName>
                    <isActive>false</isActive>
                    <label>Leasing Issues</label>
                </value>
                <value>
                    <fullName>Project Shops</fullName>
                    <isActive>false</isActive>
                    <label>Project Shops</label>
                </value>
                <value>
                    <fullName>Trading New Retailers</fullName>
                    <isActive>false</isActive>
                    <label>Trading New Retailers</label>
                </value>
                <value>
                    <fullName>Vacancy</fullName>
                    <isActive>false</isActive>
                    <label>Vacancy</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PercentageRentPaid__c</fullName>
        <formula>CurrentLease__r.PercentageRentPaid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Rent Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precinct__c</fullName>
        <label>Precinct</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>H</fullName>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
                <value>
                    <fullName>J</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>O</fullName>
                </value>
                <value>
                    <fullName>P</fullName>
                </value>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>V</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
                <value>
                    <fullName>X</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>FCT</fullName>
                </value>
                <value>
                    <fullName>RST</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
                <value>
                    <fullName>FCT2</fullName>
                </value>
                <value>
                    <fullName>PREV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreviousLease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Lease</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Spaces (Previous Lease)</relationshipLabel>
        <relationshipName>Spaces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousRent__c</fullName>
        <formula>PreviousLease__r.CurrentRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousSemiGrossRent__c</fullName>
        <formula>PreviousLease__r.SemiGrossCurrentRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Previous Semi Gross Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousTenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Spaces (Previous Tenant)</relationshipLabel>
        <relationshipName>Spaces2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Spaces</relationshipLabel>
        <relationshipName>Units</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PropidexLink__c</fullName>
        <formula>HYPERLINK(&quot;http://aupdc00-pdx01p/PROPIDEX/PROPIDEX.APPLICATION?P:&quot; &amp;  Property__r.JDEPropertyNumber__c  &amp; &quot;&amp;F:&quot; &amp;  TEXT(Level__c)  &amp; &quot;&amp;U:&quot; &amp;  UnitNo__c, &apos;Propidex Link&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Propidex Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadyToForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready to Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonForChange__c</fullName>
        <inlineHelpText>This is applicable for reconfiguration area changes.</inlineHelpText>
        <label>Reason For Change</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ReconfiguredCurrentRentSemiGross__c</fullName>
        <label>Reconfigured Current Rent (Semi Gross)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ReconfiguredCurrentRent__c</fullName>
        <description>This field will hold the pro-rata rent based on Space Reconfiguration process</description>
        <label>Reconfigured Current Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Parent
Child</description>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Relationship</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RentableArea__c</fullName>
        <label>Rentable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepRentPerM2__c</fullName>
        <formula>CurrentRent__c  /  RentableArea__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rep_RentPerM2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SpaceGrade__c</fullName>
        <description>Specify the grade of the storeroom space which is set based on certain factors like store location, so that rent can be charged accordingly.</description>
        <inlineHelpText>This is applicable for storerooms only.</inlineHelpText>
        <label>Space Grade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpaceNumber__c</fullName>
        <displayFormat>{000000}</displayFormat>
        <label>Space Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SpaceProductsApplies__c</fullName>
        <formula>If( NumberOfProducts__c &gt;0,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When this box is ticked, the list of Space Products is visible in the &quot;Related&quot; Tab.</inlineHelpText>
        <label>Space Products Applies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpaceUID__c</fullName>
        <formula>Property__r.JDEPropertyNumber__c+&apos;-&apos;+TEXT(Type__c)+&apos;-&apos;+Name</formula>
        <label>Space UID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusChangedDate__c</fullName>
        <description>Field to capture the date value whenever status is changed b/w Active and InActive</description>
        <label>Status Changed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Held</fullName>
                </value>
                <value>
                    <fullName>Trading</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECHConga__c</fullName>
        <label>TECH_Conga</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechAcknowledgeTimeStamp__c</fullName>
        <label>Tech_AcknowledgeTimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechAcknowledgeVersion__c</fullName>
        <label>Tech_AcknowledgeVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechDMImportDateTime__c</fullName>
        <label>Tech_DMImportDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDMOriginalSourceSystem__c</fullName>
        <label>Tech_DMOriginalSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMReleaseNo__c</fullName>
        <label>Tech_DMReleaseNo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceID__c</fullName>
        <label>Tech_DMSourceID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMSourceSystem__c</fullName>
        <label>Tech_DMSourceSystem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDMXREFId__c</fullName>
        <externalId>true</externalId>
        <label>Tech_DMXREF_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDWSpaceNumber__c</fullName>
        <label>Tech_DWSpaceNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TechDispatchedTimeStamp__c</fullName>
        <label>Tech_DispatchedTimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TechDispatchedVersion__c</fullName>
        <label>Tech_DispatchedVersion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TechEventVersionSame__c</fullName>
        <formula>TechAcknowledgeVersion__c  =  TechDispatchedVersion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_EventVersionSame</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TechTM1SpaceNumber__c</fullName>
        <label>Tech_TM1SpaceNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Invalid_Forecast_or_Achieved_Space__c</fullName>
        <description>This field will be used to check if the Space present on Current Forecasted Opportunity or Latest Achieved Opportunity is same as the current Space record</description>
        <formula>IF(
   AND(
       NOT(ISBLANK(CurrentForecastedOpportunity__c)),
       CurrentForecastedOpportunity__r.Space__c != Id
   ), &apos;Invalid Space on Current Forecasted Opportunity - &apos;,
    &apos;&apos; 
)+
IF(
   AND(
       NOT(ISBLANK(LatestAchievedOpportunity__c)), 
       LatestAchievedOpportunity__r.Space__c != Id
   ),&apos;Invalid Space on Latest Achieved Opportunity&apos;,
    &apos;&apos; 
)</formula>
        <label>Tech Invalid Forecast or Achieved Space</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_LatestAchievedOppId__c</fullName>
        <description>This field is for one time report. Can be deleted</description>
        <formula>LatestAchievedOpportunity__r.Id</formula>
        <label>Tech LatestAchievedOppId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalCommittedCapital__c</fullName>
        <formula>CommittedCapitalDC__c + CommittedCapitalFitoutContribution__c + CommittedCapitalLessorWorks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Committed Capital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TradingHours__c</fullName>
        <formula>Case (TEXT(ApplicableTradingHours__c),
&quot;General Merchant&quot;, Property__r.OperatingHours__c,
&quot;Restaurant Precinct&quot;, Property__r.TradingHoursRestaurantPrecinct__c,
&quot;Entertainment and Leisure Precinct&quot;, Property__r.TradingHoursEntLeisurePcnt__c,
&quot;Retail Concourse&quot;, Property__r.TradingHoursRetailConcourse__c,
&quot;Retail Interchange&quot;, Property__r.TradingHoursRetailInterchange__c,
&quot;Interchange Concourse&quot;, Property__r.TradingHoursRetailConcourse__c ,
Property__r.OperatingHours__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trading Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SpaceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitNo__c</fullName>
        <formula>TEXT(Type__c) &amp; &quot;-&quot; &amp;  Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsableArea__c</fullName>
        <inlineHelpText>Equals the rentable area.</inlineHelpText>
        <label>Usable Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VirtualVacancyEndDate__c</fullName>
        <label>Virtual Vacancy End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VirtualVacancyRent__c</fullName>
        <label>Virtual Vacancy Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VirtualVacancyStartDate__c</fullName>
        <label>Virtual Vacancy Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VirtualVacancy__c</fullName>
        <label>Virtual Vacancy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>VirtualVacancy</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARC</fullName>
                </value>
                <value>
                    <fullName>BNK</fullName>
                </value>
                <value>
                    <fullName>ELP</fullName>
                </value>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>NTH</fullName>
                </value>
                <value>
                    <fullName>OLD</fullName>
                </value>
                <value>
                    <fullName>PAD</fullName>
                </value>
                <value>
                    <fullName>RFC</fullName>
                </value>
                <value>
                    <fullName>STH</fullName>
                </value>
                <value>
                    <fullName>WST</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>ZAC</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
                <value>
                    <fullName>ZAS</fullName>
                </value>
                <value>
                    <fullName>ZBL</fullName>
                </value>
                <value>
                    <fullName>ZBM</fullName>
                </value>
                <value>
                    <fullName>ZBN</fullName>
                </value>
                <value>
                    <fullName>ZBP</fullName>
                </value>
                <value>
                    <fullName>ZBR</fullName>
                </value>
                <value>
                    <fullName>ZBU</fullName>
                </value>
                <value>
                    <fullName>ZBW</fullName>
                </value>
                <value>
                    <fullName>ZBY</fullName>
                </value>
                <value>
                    <fullName>ZCB</fullName>
                </value>
                <value>
                    <fullName>ZCH</fullName>
                </value>
                <value>
                    <fullName>ZCL</fullName>
                </value>
                <value>
                    <fullName>ZCR</fullName>
                </value>
                <value>
                    <fullName>ZCS</fullName>
                </value>
                <value>
                    <fullName>ZCT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Space</label>
    <listViews>
        <fullName>AllKioskSpaces</fullName>
        <columns>UnitNo__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>CurrentLease__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LatestJVBudget__c</columns>
        <columns>LatestBudget__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Garden City</value>
        </filters>
        <filters>
            <field>UnitNo__c</field>
            <operation>notContain</operation>
            <value>ATM</value>
        </filters>
        <label>All Kiosk Spaces</label>
    </listViews>
    <listViews>
        <fullName>AllOfficeSuits</fullName>
        <columns>UnitNo__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>CurrentLease__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LatestJVBudget__c</columns>
        <columns>LatestBudget__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>All Office Suites</label>
    </listViews>
    <listViews>
        <fullName>AllProjectSpaces</fullName>
        <columns>UnitNo__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>CurrentLease__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LatestJVBudget__c</columns>
        <columns>LatestBudget__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Project</value>
        </filters>
        <label>All Project Spaces</label>
    </listViews>
    <listViews>
        <fullName>AllProspectiveSpaces</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Type__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>HeldVacantSpace__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Warringah Mall</value>
        </filters>
        <label>All Prospective Spaces</label>
    </listViews>
    <listViews>
        <fullName>AllShopSpaces</fullName>
        <columns>UnitNo__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>CurrentLease__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LatestJVBudget__c</columns>
        <columns>LatestBudget__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>contains</operation>
            <value>Shop,Kiosk,Office Suite</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Whitford City</value>
        </filters>
        <filters>
            <field>OccupancyStatus__c</field>
            <operation>equals</operation>
            <value>2 - Leasing Issues</value>
        </filters>
        <label>All Shop Spaces</label>
    </listViews>
    <listViews>
        <fullName>AllStoreRoomSpaces</fullName>
        <columns>UnitNo__c</columns>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>CurrentLease__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>LatestJVBudget__c</columns>
        <columns>LatestBudget__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Miranda</value>
        </filters>
        <label>All Store Room Spaces</label>
    </listViews>
    <listViews>
        <fullName>All_Shop_Markup</fullName>
        <columns>Property__c</columns>
        <columns>NAME</columns>
        <columns>ForecastDealtype__c</columns>
        <columns>ForecastRent__c</columns>
        <columns>ForecastAchievedDate__c</columns>
        <columns>ForecastRentTerminationDate__c</columns>
        <columns>ForecastRentCommencementDate__c</columns>
        <columns>ForecastComments__c</columns>
        <columns>FutureRetailer__c</columns>
        <columns>VirtualVacancy__c</columns>
        <columns>VirtualVacancyRent__c</columns>
        <columns>VirtualVacancyStartDate__c</columns>
        <columns>ForecastPromotionalAllowance__c</columns>
        <columns>ForecastCapitalContribution__c</columns>
        <columns>ForecastCapitalDesignConstruction__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Space__c.SPA_LeasedSpaces</value>
        </filters>
        <label>All Shop Markup</label>
    </listViews>
    <listViews>
        <fullName>All_Shop_Markup_v2</fullName>
        <columns>UnitNo__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>FutureRetailer__c</columns>
        <columns>ForecastDealtype__c</columns>
        <columns>ForecastRent__c</columns>
        <columns>ForecastRentTerminationDate__c</columns>
        <columns>ForecastRentCommencementDate__c</columns>
        <columns>ForecastAchievedDate__c</columns>
        <columns>VirtualVacancy__c</columns>
        <columns>VirtualVacancyRent__c</columns>
        <columns>VirtualVacancyStartDate__c</columns>
        <columns>ForecastPromotionalAllowance__c</columns>
        <columns>ForecastCapitalContribution__c</columns>
        <columns>ForecastCapitalDesignConstruction__c</columns>
        <columns>ForecastComments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Miranda</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Space__c.SPA_LeasedSpaces</value>
        </filters>
        <label>PA forecast</label>
    </listViews>
    <listViews>
        <fullName>All_Vacant_Kiosks</fullName>
        <columns>Property__c</columns>
        <columns>NAME</columns>
        <columns>PreviousTenant__c</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>RentableArea__c</columns>
        <columns>OccupancyStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OccupancyStatus__c</field>
            <operation>equals</operation>
            <value>1 - Vacancy</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>All Vacant Kiosks</label>
    </listViews>
    <listViews>
        <fullName>HONL_Leasing_Finance_View</fullName>
        <columns>NAME</columns>
        <columns>CurrentRetailer__c</columns>
        <columns>LatestAchievedOpportunity__c</columns>
        <columns>FutureTenant__c</columns>
        <columns>BackUpTenant__c</columns>
        <columns>OccupancyStatus__c</columns>
        <columns>Status__c</columns>
        <columns>CurrentLeaseRentCommencement_Date__c</columns>
        <columns>CurrentLeaseExpiryDate__c</columns>
        <columns>LatestForecastedRent__c</columns>
        <columns>ActualShopOpenDate__c</columns>
        <columns>ForecastedShopOpenDate__c</columns>
        <columns>ExistingTenantsVacateDate__c</columns>
        <columns>LatestForecastedCapital__c</columns>
        <columns>RentableArea__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>equals</operation>
            <value>Hurstville</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>1,2,3</value>
        </filters>
        <filters>
            <field>CurrentLeaseExpiryDate__c</field>
            <operation>lessThan</operation>
            <value>6/30/2020</value>
        </filters>
        <filters>
            <field>OccupancyStatus__c</field>
            <operation>notContain</operation>
            <value>1 - Vacancy,3 - LBNT (Leased but not trading),4 - Held Vacancies,5 - Trading New Retailers,8 - Project Shops,10 - Inactive</value>
        </filters>
        <label>HONL Leasing Finance View</label>
        <sharedTo>
            <role>RetailFinance</role>
        </sharedTo>
    </listViews>
</CustomObject>